# libbkrp

./: CMakeLists.txt  Dockerfile  README.md
.gear/: libbkrp.spec  rules
.github/workflows/: main.yml
cmake/: BkrpBuildTreeSettings.cmake.in  BkrpConfig.cmake.in  FindIDL.cmake
doc/: README.md
examples/: CMakeLists.txt
examples/cpp_example/: CMakeLists.txt  main.cpp
include/bkrp/: bkrp.h  bkrp_client.h  ndr_bkrp.h  ndr_bkrp_c.h
src/: CMakeLists.txt  bkrp.acf  bkrp.idl  bkrp_client.c  bkrp_client.h  bkrp_client_error.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  bkrp_test.c
